k8s/frontend-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        tier: frontend
    spec:
      containers:
      - name: jsonbinit-api
        image: jsonbinit/jsonbinit-api
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
