k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: api
    tier: frontend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: api
    tier: frontend
